Remove `jsoniterator` residual from dependencies, refactor code :zap:

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   tests:
-    name: Full SDK and tools test
+    name: Full SDK test
     runs-on: ${{ matrix.os }}
     strategy:
       # Because we are testing on real QIWI API and we can't
